move db repositories to repository/db package